# python-dev-journey

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SUMMARY.md  pyproject.toml
docs/: index.md
docs/architecture/: adr-0001-uv-and-marimo.md  adr-0002-notebooks-vs-scripts.md
examples/ex_cli_basics/: README.md  cli.py
examples/ex_data_validation/: README.md  validate.py
examples/ex_marimo_intro/: README.md  app.py
examples/ex_marimo_intro/__marimo__/session/: app.py.json
projects/purview_helpers/: README.md
projects/purview_helpers/notebooks/: labels_audit.py
