[project]
name = "python-dev-journey"
version = "0.1.0"
description = "Python learning path with marimo notebooks and uv-managed environments"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Paul Denlinger" }
]
dependencies = [
  "marimo>=0.7",
  "typer>=0.9",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","W"]

[tool.pytest.ini_options]
testpaths = ["examples", "projects"]
addopts = "-q"
